style(global): refine layout and spacing for crew and technology sections, fix formatting issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,7 +187,7 @@ body {
 .home__container {
   height: calc(100vh - 96px - 40px);
   padding: 128px 0;
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -394,7 +394,7 @@ body {
   height: 100%;
   gap: 15px;
 }
-.crew__nav-item{
+.crew__nav-item {
   width: 75px;
   height: 100%;
   display: flex;
@@ -411,8 +411,8 @@ body {
   position: relative;
   z-index: 10;
 }
-.crew__nav-ring{
-  content: "";
+.crew__nav-ring {
+  content: '';
   width: 75px;
   height: 75px;
   background-color: rgba(255, 255, 255, 0);
@@ -423,11 +423,11 @@ body {
   transform: translate(-50%, -50%);
   z-index: -1;
 }
-.crew__nav-button::before{
-  content: "";
+.crew__nav-button::before {
+  content: '';
   width: 70px;
   height: 70px;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -438,8 +438,8 @@ body {
 .crew__nav-button:hover:not(.crew__nav-button--active)::before {
   transform: translate(-50%, -50%) scale(1);
 }
-.crew__nav-button::after{
-  content: "";
+.crew__nav-button::after {
+  content: '';
   width: 20px;
   height: 20px;
   background-color: rgba(255, 255, 255);
@@ -467,20 +467,19 @@ body {
   flex-direction: column;
   gap: 24px;
 }
-
-.technology__layout{
+.technology__layout {
   display: grid;
   grid-template-columns: 635px 1fr;
   column-gap: 32px;
   height: 100%;
   place-content: center;
 }
-.technology__wrapper{
+.technology__wrapper {
   display: flex;
   gap: 64px;
   align-items: center;
 }
-.technology__tab-list{
+.technology__tab-list {
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -494,37 +493,35 @@ body {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
-
-.technology__tab-button:hover:not(.technology-button__active) {
+.technology__tab-button:hover:not(.technology__tab-button--active) {
   background-color: rgba(255, 255, 255, 0.09);
   border: solid 1px rgba(255, 255, 255, 0.5);
 }
-
-.technology__tab-button__active {
+.technology__tab-button--active {
   background-color: var(--white);
   color: var(--blue-900);
 }
-.technology__info{
+.technology__info {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
-.technology__info section {
+.technology__intro {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.technology__subheading{
-  opacity: .5;
+.technology__subheading {
+  opacity: 0.5;
 }
-.technology__description{
+.technology__description {
   color: var(--blue-300);
 }
-.technology__media{
+.technology__media {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.technology__image{
+.technology__image {
   width: 100%;
 }
